--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
 
-    <title>Pratheeban Résumé</title>
+    <title>Pratheeban's webpage</title>
 
 
 <!-- Open Sans Google font -->
