--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<ul id="nav" class="nav">
 
 							<li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="_Projects_html/index.html" title="Fun Projects"><i class="icon-briefcase"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="Fun_Projects_html/blogindex.html" title="Blog"><i class="icon-briefcase"></i></a></li>
 							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
 						</ul><!--/ uL#nav -->
 					</div><!-- /.dropdown -->
@@ -248,15 +248,15 @@
 						<div class="service">
 							<i class="icon-cogs"></i>
 							<h3>Data Analysis</h3>
-							<p> Process of evaluating data using analytical and logical reasoning to decrypt the patterns hidden in disguise.  </p>
+							<p> Process of evaluating data using analytical and logical reasoning to decrypt the hidden patterns and for finding the right features to feed in a prediction or classification model. </p>
 						</div>
 					</div>
 					<!-- Service No. 4 -->
 					<div class="col-md-3 col-sm-6">
 						<div class="service">
 							<i class="icon-user"></i>
-							<h3>Towards Personalization</h3>
-							<p>Genome guided patient treatment and diagnosis is leading to a paradiagm shift from "one drug fits all" to more individualized approach.</p>
+							<h3>Deep Learning</h3>
+							<p>Deep learning is a class of methods and techniques that employ artificial neural networks with multiple layers of increasingly richer functionality.</p>
 						</div>
 					</div>
 				</div>
@@ -274,78 +274,85 @@
 				<div class="title">
 					<h2 class="h2">technical skills</h2>
 					<div class="heading-line"></div>
-					<p class="title">I enjoy programming. I transitioned from embeddded systems to signal processing, Machine learning field from my second master degree. From then, I have been learning to be better at a few of these languages by work experience and using the online courses like CourseEra, Udemy and Udacity</p>
+					<p class="title">I enjoy programming. I transitioned from embeddded systems to signal processing, Machine learning field from my second master degree. From then, I have been learning to be better at few of these languages by work experience and using the online courses from CourseEra, Udemy and Udacity</p>
 				</div>
 				<!-- Start main skills -->
 				<div class="skills-wrapper row">
 					<!-- main skill No. 1 -->
-					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="88">
+					<div class="skill col-md-4 col-sm-8">
+						<div class="chart center" data-percent="85">
 							<span><span id="chart_num_1">0</span> %</span>
 						</div>
 						<h2>Python</h2>
 					</div>
 					<!-- main skill No. 2 -->
-					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="70">
+					<div class="skill col-md-4 col-sm-8">
+						<div class="chart center" data-percent="80">
 							<span><span id="chart_num_2">0</span> %</span>
 						</div>
 						<h2>C++</h2>
 					</div>
 					<!-- main skill No. 3 -->
-					<div class="skill col-md-3 col-sm-6">
-						<div class="chart center" data-percent="80">
+					<div class="skill col-md-4 col-sm-8">
+						<div class="chart center" data-percent="75">
 							<span><span id="chart_num_3">0</span> %</span>
 						</div>
 						<h2>OpenCV</h2>
 					</div>
-					<!-- main skill No. 4 -->
+					<!-- main skill No. 4 
 					<div class="skill col-md-3 col-sm-6">
 						<div class="chart center" data-percent="55">
 							<span><span id="chart_num_4">0</span> %</span>
 						</div>
 						<h2></h2>
-					</div>
+					</div>-->
 				</div> <!-- End main skills -->
 				<div class="other-skills">
-					<h2 class="h2">other skills</h2>
+					<h2 class="h2">Programming Languages</h2>
 					<div class="heading-line"></div>
-					<p class="title">Some additional skills across disciplines</p>
+					<!--<p class="title">Languages</p>-->
 					<!-- Start other skills -->
 					<div class="skills-wrapper row">
 						<!-- Skill No. 1 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="70" data-tooltip="true" data-label="Bash" data-show-values="true" data-unit="%"></div>
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="Octave/Matlab"  ></div>
 						</div>
 						<!-- Skill No. 2 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="75" data-tooltip="true" data-label="Scikit learn - TensorFlow - Keras" data-show-values="true" data-unit="%"></div>
-						</div>
-						<!-- Skill No. 3 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="80" data-tooltip="true" data-label="Git-SVN" data-show-values="true" data-unit="%"></div>
-						</div>
-						<!-- Skill No. 4 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="60" data-tooltip="true" data-label="Octave/Matlab" data-show-values="true" data-unit="%"></div>
-						</div>
-						<!-- Skill No. 5 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="40" data-tooltip="true" data-label="Hadoop & Spark" data-show-values="true" data-unit="%"></div>
-						</div>
-						<!-- Skill No. 6 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="50" data-tooltip="true" data-label="HTML-CSS" data-show-values="true" data-unit="%"></div>
-						</div>
-						<!-- Skill No. 7 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="40" data-tooltip="true" data-label="MySQL" data-show-values="true" data-unit="%"></div>
+						<div class='bar_group col-md-4 col-xs-8'>
+							<div class=" bar_group__bar thick elastic" data-label="C"></div>
 						</div>
 						<!-- Skill No. 8 -->
-						<div class='bar_group col-md-6 col-xs-12' data-max="100">
-							<div class=" bar_group__bar thick elastic" data-value="40" data-tooltip="true" data-label="JavaScript" data-show-values="true" data-unit="%"></div>
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="JavaScript"></div>
 						</div>
-					</div>	<!-- End other skills -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic"  data-label="Scikit learn,TensorFlow, Keras"  ></div>
+						</div>
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="HTML-CSS"></div>
+						</div>
+					</div>
+					<h2 class="h2"> Others </h2>
+					<div class="heading-line"></div>
+					<div class="skills-wrapper row">
+
+						<!-- Skill No. 3 -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="Versioning : Git, SVN" ></div>
+						</div>
+						<!-- Skill No. 4 -->
+						<div class='bar_group col-md-4 col-xs-8'>
+							<div class=" bar_group__bar thick elastic" data-label="MySQL" ></div>
+						</div>
+						<!-- Skill No. 5 -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="Hadoop & Spark" ></div>
+						</div>
+						<!-- Skill No. 6 -->
+						
+						<!-- Skill No. 7 -->
+					</div>	
+						<!-- End other skills -->
 				</div>
 			</div>
 		</div>
