--- a/Fun_Projects_html/blogindex.html
+++ b/Fun_Projects_html/blogindex.html
@@ -16,7 +16,7 @@
 <meta property="twitter:title" content="Blog">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="../Photos/face4.png">
+    <meta property="twitter:image" content="../Photos/facep.png">
 
 <meta property="twitter:description" content="">
 
