--- a/Fun_Projects_html/blogindex.html
+++ b/Fun_Projects_html/blogindex.html
@@ -905,7 +905,7 @@ margin-left: -4%;
 <section class="header header-home">
 
     <div class="container">
-        <a href="blogindex.html"><img class="logo" src="../Photos/face4.png" alt="logo" /></a>
+        <a href="blogindex.html"><img class="logo" src="../Photos/facep.png" alt="logo" /></a>
         <div class="content">
             <a href="blogindex.html"><div class="name"><h1>Pratheeban Elancheliyan</h1></div></a>
             <nav>
