--- a/Fun_Projects_html/blogindex.html
+++ b/Fun_Projects_html/blogindex.html
@@ -887,7 +887,7 @@ margin-left: -4%;
 
 <link rel="shortcut icon"
 
-    src="../assets/img/icons/icon_page.png"
+    href ="../assets/img/icons/icon_page.png"
 
 >
 
