changes from vatsan

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
 						<p class="introduce"></p>
 						<p class="intro"> <ul>
                               <li>Hi! My name is Pratheeban Elancheliyan.</li>
-                              <li>I am Research Engineer at Centro de Computação Gráfica (CCG), University of Minho at Guimaraes, Portugal.</li>
-                              <li>Born and raised in India. I did my first master in UK, second master in France and  worked as a student researcher in Telecom Paristech for 1.5 years.</li>
+                              <li>I am a Research Engineer at Centro de Computação Gráfica (CCG), University of Minho at Guimaraes, Portugal.</li>
+                              <li>I did my first master in UK, second master in France and  worked as a student researcher in Telecom Paristech for 1.5 years.</li>
                               </ul></p> </br>
-            <p class="intro"><t> Major interest areas: </t></br>
+            <p class="intro"><t> Areas of interest: </t></br>
 						<p class="intro"> Image Processing, Computer Vision, Pattern Recognition,  Data Visualization, Machine Learning & Deep learning </p>
 					</div>
 				</div>
-
-
+	    </div>
+	
 
 	<section id="resume" name="resume"></section>
 	<!--EDUCATION DESCRIPTION -->
@@ -202,7 +202,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-          <imp><sm>Oct 2011 - Sept 2012 </sm></imp><br/>
+          <imp><sm>Aug 2006 - Jun 2010 </sm></imp><br/>
 					<!--<p><strong>Graduation</strong><br/>/.container -->
 					</p>
 				</div>
@@ -273,7 +273,7 @@
 				<div class="title">
 					<h2 class="h2">technical skills</h2>
 					<div class="heading-line"></div>
-					<p class="title">I enjoy programming. I transitioned from embeddded systems to signal processing, Machine learning field from my second master degree. From then, I have been learning to be better at few of these languages by work experience and using the online courses from CourseEra, Udemy and Udacity</p>
+					<p class="title">I enjoy programming. I transitioned from embedded systems to signal processing, machine learning field from my second master degree. From then, I have been learning to be better at few of these languages by work experience and using the online courses from CourseEra, Udemy and Udacity</p>
 				</div>
 				<!-- Start main skills -->
 				<div class="skills-wrapper row">
