skill index change

--- a/index.html
+++ b/index.html
@@ -307,6 +307,26 @@
 					</div>-->
 				</div> <!-- End main skills -->
 				<div class="other-skills">
+					<h2 class="h2"> Python Libraries </h2>
+					<div class="heading-line"></div>
+					<div class="skills-wrapper row">
+
+						<!-- Skill No. 3 -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="Scikit learn,TensorFlow, Keras " ></div>
+						</div>
+						<!-- Skill No. 4 -->
+						<div class='bar_group col-md-4 col-xs-8'>
+							<div class=" bar_group__bar thick elastic" data-label="LTK & SpaCy" ></div>
+						</div>
+						<!-- Skill No. 5 -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="Pandas" ></div>
+						</div>
+						<!-- Skill No. 6 -->
+						
+						<!-- Skill No. 7 -->
+					</div>	
 					<h2 class="h2">Programming Languages</h2>
 					<div class="heading-line"></div>
 					<!--<p class="title">Languages</p>-->
@@ -324,9 +344,9 @@
 						<div class='bar_group col-md-4 col-xs-8' >
 							<div class=" bar_group__bar thick elastic" data-label="JavaScript"></div>
 						</div>
-						<div class='bar_group col-md-4 col-xs-8' >
-							<div class=" bar_group__bar thick elastic"  data-label="Scikit learn,TensorFlow, Keras"  ></div>
-						</div>
+						<!--<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic"  data-label=""  ></div>
+						</div>-->
 						<div class='bar_group col-md-4 col-xs-8' >
 							<div class=" bar_group__bar thick elastic" data-label="HTML-CSS"></div>
 						</div>
