language index change

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 						</div>
 						<!-- Skill No. 4 -->
 						<div class='bar_group col-md-4 col-xs-8'>
-							<div class=" bar_group__bar thick elastic" data-label="LTK & SpaCy" ></div>
+							<div class=" bar_group__bar thick elastic" data-label="NLTK & SpaCy" ></div>
 						</div>
 						<!-- Skill No. 5 -->
 						<div class='bar_group col-md-4 col-xs-8' >
@@ -366,6 +366,22 @@
 						<!-- Skill No. 5 -->
 						<div class='bar_group col-md-4 col-xs-8' >
 							<div class=" bar_group__bar thick elastic" data-label="Hadoop & Spark" ></div>
+						</div>
+					<h2 class="h2"> Languages </h2>
+					<div class="heading-line"></div>
+					<div class="skills-wrapper row">
+
+						<!-- Skill No. 3 -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="Tamil - தமிழ்" - Native  ></div>
+						</div>
+						<!-- Skill No. 4 -->
+						<div class='bar_group col-md-4 col-xs-8'>
+							<div class=" bar_group__bar thick elastic" data-label="English - Full professional fluency " ></div>
+						</div>
+						<!-- Skill No. 5 -->
+						<div class='bar_group col-md-4 col-xs-8' >
+							<div class=" bar_group__bar thick elastic" data-label="French - Basic" ></div>
 						</div>
 						<!-- Skill No. 6 -->
 						
