language index change

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
 						<div class='bar_group col-md-4 col-xs-8' >
 							<div class=" bar_group__bar thick elastic" data-label="Hadoop & Spark" ></div>
 						</div>
+					</div>
 					<h2 class="h2"> Languages </h2>
 					<div class="heading-line"></div>
 					<div class="skills-wrapper row">
