--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="col-lg-6 col-lg-offset-3">
 					<p><t>Research Intern, </t><br/>
 						LIED,Université Paris Diderot, <br/>
-						Paris, India.<br/>
+						Paris, France.<br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
