--- a/index.html
+++ b/index.html
@@ -127,16 +127,28 @@
 		<div class="heading-line"></div>
 		<div class="row">
 
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><t> Research Engineer,</t><br/>
-						 CCG - Centro de Computação Gráfica,<br/>
-						Guimares, Portugal. <br/>
-						<i></i>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<imp><sm>March 2017 - Present </sm></imp>
-				</div>
+		<div class="col-lg-6 col-lg-offset-3">
+			<p><t> Researcher ,</t><br/>
+				Institut für Pervasive Computing,Johannes Kepler Universität <br/>
+				Linz, Austria. <br/>
+				<i></i>
+			</p>
+		</div>
+		<div class="col-lg-3">
+			<imp><sm>June 2018- Present </sm></imp>
+		</div>
+
+
+		<div class="col-lg-6 col-lg-offset-3">
+			<p><t> Research Engineer,</t><br/>
+				 CCG - Centro de Computação Gráfica,<br/>
+				Guimares, Portugal. <br/>
+				<i></i>
+			</p>
+		</div>
+		<div class="col-lg-3">
+			<imp><sm>March 2017 - May 2018 </sm></imp>
+		</div>
 
         <div class="col-lg-6 col-lg-offset-3">
 					<p><t>Student Researcher,</t><br/>
