--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 
 		<div class="col-lg-6 col-lg-offset-3">
 			<p><t> Researcher ,</t><br/>
-				Institut für Pervasive Computing,Johannes Kepler Universität <br/>
+				Institut für Pervasive Computing,<br/>
+				Johannes Kepler Universität <br/>
 				Linz, Austria. <br/>
 				<i></i>
 			</p>
