Change in position
Address and title change

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h1><strong>Pratheeban Elancheliyan</strong></h1>
-					<h3>Research Engineer</h3>
-					<h3>Centro de Computação Gráfica (CCG),</h3>
-          <h3>University of Minho, Guimaraes, Portugal.</h3>
+					<h3>Researcher,</h3>
+					<h3>Institue of Pervasive Computing,</h3>
+          <h3>Johannes Kepler University Linz - JKU.</h3>
 					<h3> <a href="mailto:epratheeban@gmail.com">epratheeban@gmail.com</h3></a>
 
 
@@ -432,12 +432,12 @@
 						epratheeban@gmail.com <br/>
 					</p>
 					<p><t>Address</t><br/>
-						Rua Capitao Alfredo Guimaraes, No, 412<br/>
-						4800-019 Guimares, <br/>
-						Portugal. <br/>
+						Lustenauer Str. <br/>
+						4020-Linz <br/>
+						Austria. <br/>
 					</p>
 					<p><t>Phone</t><br/>
-						+351-938106281 <br/>
+						 +43-68120275563 <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
