--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 						<p class="introduce"></p>
 						<p class="intro"> <ul>
                               <li>Hi! My name is Pratheeban Elancheliyan.</li>
-                              <li>I am a Research Engineer at Centro de Computação Gráfica (CCG), University of Minho at Guimaraes, Portugal.</li>
-                              <li>I did my first master in UK, second master in France and  worked as a student researcher in Telecom Paristech for 1.5 years.</li>
+                              <li>I am a researcher at Institute of Pervasive Computing- JKU in Linz.</li>
+                              <li>I did my first master in UK, second master in France and  worked as a researcher in 3 different countries with almost 4 years of expereince.</li>
                               </ul></p> </br>
             <p class="intro"><t> Areas of interest: </t></br>
 						<p class="intro"> Image Processing, Computer Vision, Pattern Recognition,  Data Visualization, Machine Learning & Deep learning </p>
